member features only visible on nav bar when logged in. search function nearly complete needs logic fixed for passing to the view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,3 +29,7 @@
     width: 30%;
     min-width: 200px;
 }
+
+li {float: left;
+    list-style-type:none;
+    }
